5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1638_651.log
== TEST (2019-04-04 20:35:47) 
-- CODE:
altura = float(input("altura"))
sexo = input("sexo (M/F)")
if (sexo.upper == "M"):
	print(round((72.7*altura)-58), 2)
else:
	print(round((62,1*altura)-44,7), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((62,1*altura)-44,7), 2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:35:57) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
if (sexo.upper == "M"):
	print(round((72.7*altura)-58), 2)
else:
	print(round((62,1*altura)-44,7), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((62,1*altura)-44,7), 2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:36:44) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
if (sexo.upper == "M"):
	print(round((72.7*altura)-58, 2)
else:
	print(round((62,1*altura)-44,7), 2)
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:37:04) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
if (sexo.upper == "M"):
	print(round((72.7*altura)-58, 2))
else:
	print(round((62,1*altura)-44,7), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((62,1*altura)-44,7), 2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:37:28) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
if (sexo.upper == "M"):
	print(round((72.7*altura)-58, 2))
else:
	print(round((62,1*altura)-44,7, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((62,1*altura)-44,7, 2))
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:38:22) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
if (sexo.upper == "M"):
	print(round(((72.7*altura)-58) , 2))
else:
	print(round(((62,1*altura)-44,7) , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(((62,1*altura)-44,7) , 2))
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:40:24) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
pm = 72.7*altura - 58
pf = 62.1*altura - 44.7
if (sexo.upper() == "M"):
	print(round(pm, 2))
else:
	print(round(pf, 2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:40:33) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
pm = 72.7*altura - 58
pf = 62.1*altura - 44.7
if (sexo.upper() == "M"):
	print(round(pm, 2))
else:
	print(round(pf, 2))
-- EXECUTION TIME:
0.152894
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:36) 
-- CODE:
altura = float(input("altura: "))
sexo = input("sexo (M/F): ")
pm = 72.7*altura - 58
pf = 62.1*altura - 44.7
if (sexo.upper() == "M"):
	print(round(pm, 2))
else:
	print(round(pf, 2))
-- EXECUTION TIME:
0.119316
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
